--- a/src/app/core/todo
+++ b/src/app/core/todo
@@ -1,2 +1,12 @@
-Uploading pictures(multiple) and video and the lot 
-product checking page (changing the buttons on hover....installing the fx spasser thingy ~to space the buttons for size and shii)
+ | For stories
+ 
+   limit images 
+   limit video length
+   related 
+   show images
+   show video
+
+   
+   show related products 
+   add related products 
+   remove related product
